[package]
name = "uplift_kit"
version = "0.1.8"
edition = "2021"

[lib]
name = "uplift_kit"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18", features=["extension-module", "abi3-py37"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
mimalloc = "0.1.34"
num_cpus = "1.0"
concurrent-queue = "2.1.0"
threadpool = "1.8.1"
lockfree-object-pool = "0.1"
noisy_float = "0.2.0"
