[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "uplift_kit"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    'pandas >= 1.0',
    'pyarrow >= 10.0',
    'scikit-learn',
    'numpy',
    'xgboost'
]